- Portuguese traditions changed from +1 fleet movement speed and +10% infantry combat ability to +15% heavy ship combat ability and +15% morale damage dealt
- Changed Legacy of the Navigator idea from +10% naval morale and +20% colonial range to +25% colonial range and -20% troops in transport attrition at sea
- Added Feitoria idea giving +15% trade steering
- Added India Armadas idea giving +15% ship trade power and +1 artillery fire
- Renamed Land Before Faith to Bandeirantes, and removed the original Bandeirantes idea
- Added Caçadores idea giving -20% fire damage received
- Removed Afonsive Ordinances idea and Royal Military Academy idea
- Changed Scottish traditions from +25% land forcelimit to +20% manpower modifier
- Changed Scottish bonus from -5% land maintenance to -1 global unrest
- Added Resist the English idea giving -15% morale damage received and +15% fort defense
- Removed Break the Black Douglas idea
- Changed Reign In The Clans idea from +20% manpower to +25% land forcelimit
- Changed Acts of Revocation from -15% aggressive expansion impact to +5% estate loyalty on privilege revoked and -25% autonomy change time
- Change Royal Revenue from +10% global tax to +15%
- Changed Comets idea from -10% stability cost to -10% idea cost and +15% institution spread
- Changed Aragon tradition from +10% trade efficiency to +10% land morale
- Changed Aragon bonus from +1 artillery fire to +15% naval forcelimit
- Protection of the Little Folk idea changed from +10% land morale to +50% infantry shock and -10% infantry cost
- Protection of the Coastlines idea changed from +10% naval forcelimit and +25% global sailors  to -10% naval maintenance and -10% sailor maintenance
- Mediterranean Trade idea changed from +20% trade steering to +15% trade efficiency
- Chartered Merchant Companies changed from +20% global trade power to +10% global trade power and +10% trade steering