@@ -445,6 +445,10 @@ btc_sound_toll = {
 
 feitoria = {
 	province_trade_power_value = 5
-	defensiveness = 0.15
+	local_ship_repair = 0.15
 	local_governing_cost = 0.25
+}
+
+opm_diplomacy = {
+	diplomatic_upkeep = 1
 }
