@@ -2286,6 +2286,12 @@ on_monthly_pulse = {
 	events = {
 		btc_por.133	#Monthly saudade calculation
 	}
+	events = {
+		btc_events.5	#Monthly OPM diplo calculation
+	}
+	events = {
+		btc_por.135	#Remove feitoria modifier
+	}
 }
 on_yearly_pulse = {
 	events = {
