@@ -2521,11 +2521,64 @@ province_event = {
 	option = {	# Build it
 		name = btc_por.134a
 
-		owner = { add_years_of_income = -0.25 }
-
+		ai_chance = {
+			factor = 1
+			modifier = {
+				factor = 0
+				NOT = { owner = { treasury = 200 }}
+			}
+		}
+		
 		add_province_modifier = {
 			name = feitoria
 			duration = -1
+		}
+
+		if = {
+			limit = {
+				owner = {
+					NOT = { mil_tech = 14 }
+				}
+			}
+			add_building_construction = {
+				building = fort_15th
+			}
+		}
+		if = {
+			limit = {
+				owner = {
+					AND = {
+						mil_tech = 14
+						NOT = { mil_tech = 19 }
+					}
+				}
+			}
+			add_building_construction = {
+				building = fort_16th
+			}
+		}
+		if = {
+			limit = {
+				owner = {
+					AND = {
+						mil_tech = 19
+						NOT = { mil_tech = 24 }
+					}
+				}
+			}
+			add_building_construction = {
+				building = fort_17th
+			}
+		}
+		if = {
+			limit = {
+				owner = {
+					mil_tech = 24
+				}
+			}
+			add_building_construction = {
+				building = fort_18th
+			}
 		}
 	}
 
@@ -2533,5 +2586,63 @@ province_event = {
 		name = btc_por.134b
 
 		owner = { add_prestige = -1 }
+	}
+}
+
+# Remove feitoria #
+
+country_event = {
+	id = btc_por.135
+	title = btc_por.135_t
+	desc = btc_por.135_d
+	picture = FORT_eventPicture
+	goto = ROOT
+
+	is_triggered_only = yes
+
+	trigger = {
+		any_owned_province = {
+			has_province_modifier = feitoria
+			AND = {
+				NOT = { has_building = fort_15th }
+				NOT = { has_building = fort_16th }
+				NOT = { has_building = fort_17th }
+				NOT = { has_building = fort_18th }
+			}
+		}
+	}
+
+	immediate = {
+		hidden_effect = {
+			every_owned_province = {
+				if = {
+					limit = {
+						has_province_modifier = feitoria
+						AND = {
+							NOT = { has_building = fort_15th }
+							NOT = { has_building = fort_16th }
+							NOT = { has_building = fort_17th }
+							NOT = { has_building = fort_18th }
+						}
+					}
+					save_event_target_as = remove_feitoria
+				}
+			}
+		}
+	}
+	
+	mean_time_to_happen = {
+		days = 1
+	}
+
+	option = {
+		name = btc_por.135a
+
+		if = {
+			limit = { has_saved_event_target = remove_feitoria }
+			event_target:remove_feitoria = {
+				remove_province_modifier = feitoria
+			}
+		}
 	}
 }
