@@ -207,6 +207,9 @@
  btc_por.134_d:0 "Now that we have successfully integrated [Root.Province.GetName], we can establish a feitoria to assert our dominance over the region."
  btc_por.134a:0 "Build it."
  btc_por.134b:0 "It is too expensive."
+ btc_por.135_t:0 "Removal of Feitoria"
+ btc_por.135_d:0 "With the destruction of the fort at [remove_feitoria.GetName], we no longer get the benefits of the feitoria there."
+ btc_por.135a:0 "It's a shame."
 
 # Granada Paria #
 
